# flipbook

./: LICENSE  README.md  blank-canvas-active-examples.cabal  flipbook.cabal
active-text-opacity/: Main.hs
after-test/: Main.hs
effects/: Effects.hs  Main.hs
examples/: .directory  LICENSE  flipbook-examples.cabal
examples/active-text-opacity/: Main.hs
examples/after-test/: Main.hs
examples/rotate-square-active/: Main.hs
src/: Effects.hs  Main.hs
src/Graphics/Flipbook/: Effects.hs
