name:                flipbook
version:             0.1.0.0
synopsis:            Animation using blank-canvas and active
-- description:         
homepage:            https://github.com/nshaheed/flipbook
license:             BSD3
license-file:        LICENSE
author:              Nicholas Shaheed
maintainer:          n704s313@ku.edu
-- copyright:           
category:            Graphics
build-type:          Simple
cabal-version:       >= 1.10

library
  exposed-modules:     Effects
  build-depends:       active
                     , base         >= 4.3.1
                     , blank-canvas >= 0.4
                     , mtl          >= 2.0.1
                     , text         >= 0.11
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -Wall -threaded

executable flipbook-example-active-text-opacity
  main-is:             Main.hs
  build-depends:       active
                     , base         >= 4.3.1
                     , blank-canvas >= 0.4
  hs-source-dirs:      examples/active-text-opacity
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded

executable flipbook-example-after-test
  main-is:             Main.hs
  build-depends:       active
                     , base         >= 4.3.1
                     , blank-canvas >= 0.4
  hs-source-dirs:      examples/after-test
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded

executable flipbook-example-rotate-square-active
  main-is:             Main.hs
  build-depends:       active
                     , base         >= 4.3.1
                     , blank-canvas >= 0.4
  hs-source-dirs:      examples/rotate-square-active
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded
