name:                flipbook
version:             0.1.0.0
synopsis:            Animation using blank-canvas and active
-- description:         
homepage:            https://github.com/nshaheed/flipbook
license:             BSD3
license-file:        LICENSE
author:              Nicholas Shaheed
maintainer:          n704s313@ku.edu
-- copyright:           
category:            Graphics
build-type:          Simple
cabal-version:       >= 1.10
extra-source-files:  README.md

library
  exposed-modules:     Graphics.Flipbook.Effects
  other-modules:       Main
  build-depends:       active
                     , base         >= 4.3.1
                     , blank-canvas >= 0.4
                     , text         >= 0.11
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -Wall -threaded
