name:                flipbook-examples
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            https://github.com/nshaheed/flipbook/examples
license:             BSD3
license-file:        LICENSE
author:              Nicholas Shaheed
maintainer:          n704s313@ku.edu
-- copyright:           
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

executable flipbook-example-active-text-opacity
  main-is:             Main.hs
  build-depends:       active
                     , base         >= 4.3.1
                     , blank-canvas >= 0.5
  hs-source-dirs:      active-text-opacity
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded

executable flipbook-example-after-test
  main-is:             Main.hs
  build-depends:       active
                     , base         >= 4.3.1
                     , blank-canvas >= 0.5
  hs-source-dirs:      after-test
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded

executable flipbook-example-rotate-square-active
  main-is:             Main.hs
  build-depends:       active
                     , base         >= 4.3.1
                     , blank-canvas >= 0.5
  hs-source-dirs:      rotate-square-active
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded